# uatere

./: .clang-format  .clang-tidy  .gitignore  .travis.yml  CMakeLists.txt  README.md  syntax_check.sh
.circleci/: config.yml
include/uatere/: common.h  core.h  main-page.h  page.h  panel.h  screen.h  url-panel.h
src/: core.cc  main-page.cc  main.cc  page.cc  panel.cc  screen.cc
